FEAT(kspace): motion

--- a/examples/coils.ipynb
+++ b/examples/coils.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    },
    "outputs": [],
    "source": [
@@ -22,7 +25,10 @@
     "Let's generate a synthetic signal magnitude. We use circles of varying radii."
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    }
   },
   {
@@ -143,7 +149,6 @@
     }
    ],
    "source": [
-    "\n",
     "trf = ArrayCoilTransform()\n",
     "sos = trf(mag[None])[0]\n",
     "\n",
