ENH: propagate include/exclude keys to IntensityTransform + rerun notebook

--- a/docs/examples/synth.ipynb
+++ b/docs/examples/synth.ipynb
@@ -273,13 +273,10 @@
     "    img, newlag = trf(lab)\n",
     "    plt.imshow(img.squeeze().T.flip(0), cmap='gray', interpolation='nearest')\n",
     "    plt.axis('off')\n",
-    "plt.show()"
+    "plt.show()\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   }
  ],
