--- a/docs/examples/geom.ipynb
+++ b/docs/examples/geom.ipynb
@@ -170,7 +170,7 @@
       "order : int\n",
       "    Spline order\n",
       "\n",
-      "Keyword Parameters\n",
+      "Other Parameters\n",
       "------------------\n",
       "shared : {'channels', 'tensors', 'channels+tensors', ''}\n",
       "    Apply same hyperparameters to all images/channels\n",
@@ -324,7 +324,7 @@
       "bound : {'zeros', 'border', 'reflection'}\n",
       "    Padding mode\n",
       "\n",
-      "Keyword Parameters\n",
+      "Other Parameters\n",
       "------------------\n",
       "returns : [list or dict of] {'input', 'output', 'flow', 'matrix'}\n",
       "    - 'input': The input image\n",
@@ -443,7 +443,7 @@
       "order : int\n",
       "    Spline order\n",
       "\n",
-      "Keyword Parameters\n",
+      "Other Parameters\n",
       "------------------\n",
       "returns : [list or dict of] {'input', 'output', 'flow', 'controls'}\n",
       "    - 'input': The input image\n",
