--- a/docs/examples/noise.ipynb
+++ b/docs/examples/noise.ipynb
@@ -138,7 +138,7 @@
       "sigma : float\n",
       "    Standard deviation\n",
       "\n",
-      "Keyword Parameters\n",
+      "Other Parameters\n",
       "------------------\n",
       "returns : [list or dict of] {'input', 'output', 'noise'}\n",
       "    Which tensors to return\n",
@@ -235,7 +235,7 @@
       "nb_channels : int\n",
       "    Number of independent channels\n",
       "\n",
-      "Keyword Parameters\n",
+      "Other Parameters\n",
       "------------------\n",
       "returns : [list or dict of] {'input', 'output', 'noise'}\n",
       "    Which tensors to return\n",
@@ -325,7 +325,7 @@
       "mean : float\n",
       "    Expected value\n",
       "\n",
-      "Keyword Parameters\n",
+      "Other Parameters\n",
       "------------------\n",
       "returns : [list or dict of] {'input', 'output', 'noise'}\n",
       "    Which tensors to return\n",
@@ -435,7 +435,7 @@
       "vmax : float\n",
       "    Maximum g-factor\n",
       "\n",
-      "Keyword Parameters\n",
+      "Other Parameters\n",
       "------------------\n",
       "returns : [list or dict of] {'input', 'output', 'gfactor', 'noise', 'scalednoise'}\n",
       "    Which tensors to return\n",
@@ -525,7 +525,7 @@
       "    If a `int`, sample from `RandInt(1, value)`.\n",
       "    To use a fixed value, pass `Fixed(value)`.\n",
       "\n",
-      "Keyword Parameters\n",
+      "Other Parameters\n",
       "------------------\n",
       "returns : [list or dict of] {'input', 'output', 'noise'}\n",
       "    Which tensors to return\n",
